reset css and creating the container

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     />
   </head>
   <body>
+    <div class="container">
+        
+    </div>
     <script src="./index.js" defer></script>
   </body>
 </html>
