--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
   </head>
   <body>
     <div class="container">
-        
+      <div class="container__wrapper">
+        <div class="header">
+          <h1>Find The Github Account!</h1>
+        </div>
+        <div class="container__form">
+          <form>
+            <input type="text" name="" id="" /><button>Search</button>
+          </form>
+        </div>
+      </div>
     </div>
     <script src="./index.js" defer></script>
   </body>
