--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
       <div class="container__wrapper">
         <div class="header">
           <h1>Find The Github Account!</h1>
+          <div>
+            <i class="bi bi-github"></i>
+          </div>
         </div>
         <div class="container__form">
-            <input type="text" name="" id="" /><button>Search</button>
+            <input type="text" name="" id="" />
+            <button>Search</button>
         </div>
       </div>
     </div>
