--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           </div>
         </div>
         <div class="container__form">
-            <input type="text" name="" id="" />
-            <button>Search</button>
+          <input type="text" name="" id="" />
+          <button class="search-btn"><i class="bi bi-search"></i></button>
         </div>
       </div>
     </div>
