--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
         </div>
       </div>
     </div>
-    <script src="./index.js" type="module" defer></script>
+    <script type="module" src="./index.js" defer></script>
   </body>
 </html>
