--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="container__form">
-          <input type="text" name="" id="username-input" />
+          <input type="text" name="" id="username-input" autocomplete="off" spellcheck="false" placeholder="Enter the profile..."/>
           <button class="search-btn"><i class="bi bi-search"></i></button>
         </div>
       </div>
