process the data

--- a/index.html
+++ b/index.html
@@ -28,9 +28,17 @@
           </div>
         </div>
         <div class="container__form">
-          <input type="text" name="" id="username-input" autocomplete="off" spellcheck="false" placeholder="Enter the profile..."/>
+          <input
+            type="text"
+            name=""
+            id="username-input"
+            autocomplete="off"
+            spellcheck="false"
+            placeholder="Enter the profile..."
+          />
           <button class="search-btn"><i class="bi bi-search"></i></button>
         </div>
+        <div class="github-profile"></div>
       </div>
     </div>
     <script type="module" src="./index.js" defer></script>
