--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
           />
           <button class="search-btn"><i class="bi bi-search"></i></button>
         </div>
-        <div class="github-profile"></div>
+        <div class="github-profile">
+          <div id="avatar_url" class="user-data-item"></div>
+          <div id="login" class="user-data-item"></div>
+          <div id="public_repos" class="user-data-item"></div>
+          <div id="followers" class="user-data-item"></div>
+          <div id="following" class="user-data-item"></div>
+          <a href=""><i class="bi bi-github"></i></a>
+        </div>
       </div>
     </div>
     <script type="module" src="./index.js" defer></script>
