--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
           <button class="search-btn"><i class="bi bi-search"></i></button>
         </div>
         <div class="github-profile">
-          <div id="avatar_url" class="user-data-item"></div>
-          <div id="login" class="user-data-item"></div>
+          <div class="user-container">
+            <div id="avatar_url" class="user-data-item"></div>
+            <div id="login" class="user-data-item"></div>
+          </div>
           <div id="public_repos" class="user-data-item"></div>
           <div id="followers" class="user-data-item"></div>
           <div id="following" class="user-data-item"></div>
-          <a href=""><i class="bi bi-github"></i></a>
+          <a href="" class="profile-link" target="_blank"><i class="bi bi-github"></i></a>
         </div>
       </div>
     </div>
