--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
             <div id="avatar_url" class="user-data-item"></div>
             <div id="login" class="user-data-item"></div>
           </div>
-          <div id="public_repos" class="user-data-item"></div>
-          <div id="followers" class="user-data-item"></div>
-          <div id="following" class="user-data-item"></div>
+          <div class="user-details">
+            <div id="public_repos" class="user-data-item"></div>
+            <div id="followers" class="user-data-item"></div>
+            <div id="following" class="user-data-item"></div> 
+          </div>
           <a href="" class="profile-link" target="_blank"><i class="bi bi-github"></i></a>
         </div>
       </div>
